--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <!-- Discord Embed Metadata -->
     <meta property="og:title" content="Marin Kitagawa">
-    <meta property="og:description" content="Image of Marin Kitagawa">
+    <meta property="og:description" content="Marin Kitagawa">
     <meta property="og:image" content="https://i.imgur.com/wEuoSWZ.jpeg">
     <meta property="og:url" content="https://yourdomain.com/kitagawa.html">
     <meta property="og:type" content="website">
