--- a/index.html
+++ b/index.html
@@ -43,12 +43,39 @@
             margin-bottom: 10px;
             display: none; /* Hidden by default */
         }
+
+        /* Bottom Bar Styles */
+        .bottom-bar {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            background-color: black;
+            text-align: center;
+            padding: 10px 0;
+            z-index: 1000;
+        }
+
+        .bottom-bar a {
+            color: #5865F2; /* Discord blue */
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        .bottom-bar a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="page-title">Marin Kitagawa</div>
         <img src="https://i.imgur.com/wEuoSWZ.jpeg" alt="Marin Kitagawa">
+    </div>
+
+    <!-- Bottom Bar -->
+    <div class="bottom-bar">
+        <a href="https://discord.com/invite/ZkxkHcH8uw" target="_blank">Discord</a>
     </div>
     
     <script>
