--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             width: 100%;
             background-color: black;
             text-align: center;
-            padding: 10px 0;
+            padding: 40px 0; /* increased height */
             z-index: 1000;
         }
 
@@ -60,6 +60,7 @@
             color: #5865F2; /* Discord blue */
             text-decoration: none;
             font-weight: bold;
+            font-size: 48px; /* increased text size */
         }
 
         .bottom-bar a:hover {
